--- a/src/main/resources/templates/login/loginForAdmin.html
+++ b/src/main/resources/templates/login/loginForAdmin.html
@@ -10,8 +10,6 @@
 <link rel="stylesheet" type="text/css" th:href="@{/bootstrap/css/bootstrap.css}">
 <script type="text/javascript" th:src="@{/js/jquery-3.6.0.min.js}"></script>
 <script type="text/javascript" th:src="@{/bootstrap/js/bootstrap.js}"></script>
-<script type="text/javascript" th:src="@{/js/vue.js}"></script>
-<script type="text/javascript" th:src="@{/js/vue-resource.min.js}"></script>
 
 <style>
   body {
@@ -37,35 +35,22 @@
 </head>
 <body>
 <div class="login_panel" id="login_panel">
-  <form>
+  <form action="/login/login" method="post">
     <div class="form-group">
-      <h3>{{ form_title }}</h3>
+      <h3>管理员登录</h3>
     </div>
     <div class="form-group">
-      <input type="text" v-model="account" placeholder="账号" class="form-control"/>
+      <input type="text" name="username" placeholder="账号" class="form-control"/>
     </div>
     <div class="form-group">
-      <input type="password" v-model="password" placeholder="密码" class="form-control"/>
+      <input type="password" name="password" placeholder="密码" class="form-control"/>
     </div>
-    <button class="btn btn-primary" v-on:click="submit">登录</button>
+    <button class="btn btn-primary" type="submit">登录</button>
   </form>
 </div>
 
 <script type="text/javascript">
-  const vm = new Vue({
-    el: '#login_panel',
-    data: {
-      form_title: "管理员登录"
-    },
-    methods: {
-      submit: function (event) {
-        alert("submit")
-        this.$http.post('/admin/adminLogin',{account:this.account,password:this.password}).then(function(result){
-            console.log(result)
-        })
-      },
-    }
-  });
+
 </script>
 </body>
 </html>
